fix white line above dockpanel on firefox

--- a/plugins-client/ext.main/style/style.css
+++ b/plugins-client/ext.main/style/style.css
@@ -149,7 +149,7 @@ BODY {
     position: relative;
 }
 
-.dockcol{
+.dockcol, .hboxdockpanel {
 /*    border-left : 1px solid #333;*/
 /*    -moz-box-shadow: 1px 0 0 rgba(255, 255, 255, 0.8) inset;
     -webkit-box-shadow: 1px 0 0 rgba(255, 255, 255, 0.8) inset;*/
